# raytracing

./: Cargo.toml  README.md
src/: camera.rs  dense_storage.rs  main.rs  material.rs  mesh.rs  mesh_object.rs  scene.rs  shader_types.rs  state.rs  transform.rs
src/shaders/: blit.wgsl  main.wgsl  rt_compute.wgsl
