[package]
name = "raytracing"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
pollster = "0.4.0"
wgpu = "25.0.2"
winit = "0.30.11"
bytemuck = "1.23.0"
glam = { version = "0.30.3", features = ["bytemuck"] }
tobj = "4.0.3"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
